/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package Interfaces;

/**
 *
 * @author pabrmo971
 */
public interface MiembroAcademia {
    //Método abstracto
    abstract double calcularValorMensual();
}
